  of the sub model build.  The old code forced a rebuild of the top level BSV
  every time, even if it was built already.
- Return status of sub-model builds so parent SCons aborts correctly.


----------
mcadler     Date: Fri Sep  9 13:28:41 EDT 2011  CSN: CSN-leap-155
                  Fri Sep  9 17:28:41 UTC 2011


Directory modules/leap/build-support/build-pipelines/stages/xilinx
 XILINX_XST.py             Locally Modified          154 

Revert to previous version, where child xcf has the same contents as the top level.
Right now, the "top level" file has configuration for all synthesis boundaries.
It also has critical bluespec.xcf configuration.  Without these, builds below
top level are bound to have problems.

The real solution is more complicated and requires some notion of global vs.
local xcf configuration.

----------
mpellaue    Date: Wed Sep 14 10:50:56 EDT 2011  CSN: CSN-leap-158
                  Wed Sep 14 14:50:56 UTC 2011


Directory debian
 control                   Locally Modified          157 
 changelog                 Locally Modified          157 


Updating debian files for next release, logically set at 11.12 since the
previous ones were 11.03 and 11.06 and 11.09, no matter what schedule we
predict....


----------
mcadler     Date: Thu Sep 15 16:28:57 EDT 2011  CSN: CSN-leap-159
                  Thu Sep 15 20:28:57 UTC 2011


Directory modules/leap/virtual-platform/virtual-devices/devices/starter/null
 starter-device.cpp        Locally Modified          158 

Method bodies were defined in both the .h and .cpp files.

----------
mpellaue    Date: Tue Sep 20 10:35:58 EDT 2011  CSN: CSN-leap-161
                  Tue Sep 20 14:35:58 UTC 2011


Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-hybrid-605d-syn.apm Locally Added               0 

Directory config/pm/leap/submodels/pipelines
 build-pipeline-vico-xilinx-synplify.apm Locally Added               0 


Patch from Mikhail. Add a combined xilinx-synplify build flow for ML605/vico.